--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "codeception/module-asserts": "^2.0",
     "php-coveralls/php-coveralls": "^2.0",
     "squizlabs/php_codesniffer": "3.*",
-    "phpstan/phpstan": "^1.8"
+    "phpstan/phpstan": "^1.8",
+    "phpdocumentor/phpdocumentor": "3.0.*"
   },
   "autoload": {
     "psr-4": {
@@ -45,6 +46,9 @@
   "config": {
     "fxp-asset": {
       "enabled": false
+    },
+    "allow-plugins": {
+      "symfony/flex": true
     }
   },
   "repositories": [
@@ -61,6 +65,10 @@
     "test-coverage-html": ["./vendor/bin/codecept run unit tests/unit --coverage-html"],
     "test-coverage-xml": ["./vendor/bin/codecept run unit tests/unit --coverage-xml"],
     "codesniffer": ["./vendor/bin/phpcs --ignore=vendor,tests --standard=tests/coding_standard.xml -s ."],
-    "stan": ["./vendor/bin/phpstan analyse -l 9 src"]
+    "stan": ["./vendor/bin/phpstan analyse -l 9 src"],
+    "phpdoc": [
+      "export COMPOSER_PROCESS_TIMEOUT=9000",
+      "vendor/bin/phpdoc -d ./src -v"
+    ]
   }
 }
