--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          branch: gh-pages
+          branch: phpdoc
           folder: phpdoc
