--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,9 +44,7 @@ jobs:
         run: composer install --no-interaction
 
       - name: Generate API docs
-        uses: phpDocumentor/phpDocumentor@master
-        with:
-          args: --directory ./src --visibility public --target ./phpdoc --template default -v
+        run: docker run --rm -v $(pwd):/data phpdoc/phpdoc:3 --directory ./src --visibility public --target ./phpdoc --template default -v
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
