--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,8 +1,9 @@
 name: deploy docs
 
 on:
-  release:
-    types: [ created ]
+  push:
+    branches:
+      - master
   workflow_dispatch:
 
 permissions:
